--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ionic-native/core": "4.20.0",
     "@ionic-native/splash-screen": "4.20.0",
     "@ionic-native/status-bar": "4.20.0",
+    "@ionic/lab": "^3.2.10",
     "@ionic/storage": "2.2.0",
     "angular2-jwt": "^0.2.3",
     "ionic-angular": "3.9.9",
