--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/lab": "^3.2.10",
     "@ionic/storage": "2.2.0",
     "angular2-jwt": "^0.2.3",
+    "cordova-android": "~6.3.0",
     "cordova-browser": "~5.0.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-device": "^2.0.2",
@@ -44,7 +45,7 @@
     "zone.js": "0.8.29"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.2.4",
+    "@ionic/app-scripts": "^3.2.4",
     "@types/angular-jwt": "^0.0.29",
     "typescript": "2.6.2"
   },
@@ -60,7 +61,8 @@
       "cordova-plugin-camera": {}
     },
     "platforms": [
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
